# fastapi-mongo-starter

./: .dockerignore  .env.example  .gitignore  DOCKER_QUICKSTART.md  DOCKER_SETUP.md  Dockerfile  FastAPI-template.postman_collection.json  LICENSE  README.md  docker-compose.yml  example.env  pyproject.toml
app/: dependencies.py  main.py
app/api/v1/: __init__.py
app/api/v1/routers/: admin.py  auth.py  users.py
app/core/: app_config.py  config.py  db.py  exception_handlers.py  health.py  middleware.py
app/middleware/: http_logger.py
app/models/: role.py  session.py  user.py
app/schemas/: admin.py  auth.py  user.py
app/services/: session_service.py
app/utils/: auth.py  formatter.py  logging.py  user_agent.py
