[project]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI template with MongoDB + Beanie"
requires-python = ">=3.12"
authors = [
    { name = "Uzair Ahmed", email = "uzer-ab@github" }
]
dependencies = [
    "fastapi[standard]",
    "beanie>=1.25,<1.29.0",
    "motor",
    "pydantic-settings",
    "python-multipart",
    "uvicorn[standard]",
    "python-jose[cryptography]>=3.5.0",
    "argon2-cffi>=25.1.0",
    "passlib[argon2]>=1.7.4",
    "user-agents>=2.2.0",
    "pytz>=2025.2",
]

[project.urls]
Homepage = "https://github.com/uzer-ab/fastapi-mongo-starter"
Repository = "https://github.com/uzer-ab/fastapi-mongo-starter"
Issues = "https://github.com/uzer-ab/fastapi-mongo-starter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
